1. 适当增加解析部分的字号 2. 修复iOS Anki记忆卡上直接显示答案时，【你的选项】为@的问题 3. 修复iOS Anki记忆卡上解析部分字体偏粗的问题

--- a/styles.css
+++ b/styles.css
@@ -131,12 +131,13 @@ a {
 
 .notes-container {
     background-color: white;
-    font-size: 11px;
+    font-size: 13px;
     max-height: 50px;
     overflow-y: scroll;
     color: black;
     border-radius: 5px;
     padding: 10px;
+    font-weight: normal;
 }
 
 .modal {
