--- a/styles.css
+++ b/styles.css
@@ -143,7 +143,7 @@
 
 .footer {
     font-size: 14px;
-    margin: 30px 10px;
+    margin: 15px 10px 30px 10px;
     color: white;
     font-weight: normal;
 }
@@ -172,9 +172,11 @@ a {
 
 #notes-wrapper {
     display: none;
+    margin: 0 10px;
 }
 
-.notes-container {
+.notes-container, .notes-button-container {
+    display: none;
     background-color: white;
     font-size: 13px;
     max-height: 80px;
@@ -183,6 +185,11 @@ a {
     border-radius: 5px;
     padding: 10px;
     font-weight: normal;
+}
+
+.notes-button-container {
+    text-align: center;
+    margin-top: 10px;
 }
 
 .modal {
