--- a/styles.css
+++ b/styles.css
@@ -24,7 +24,8 @@
 
 .option {
     color: #222222;
-    background-color: #f2f2f4;
+    border: 1px solid #f2f3f4;
+    background-color: #fafafb;
     padding: 7px 10px;
     margin: 10px;
     line-height: 26px;
