--- a/styles.css
+++ b/styles.css
@@ -24,7 +24,7 @@
 
 .option {
     color: #222222;
-    border: 1px solid #f2f3f4;
+    border: 1px solid #dddddd;
     background-color: #fafafb;
     padding: 7px 10px;
     margin: 10px;
