微调选项前面序号的位置，使其与对错图标居中对其

--- a/styles.css
+++ b/styles.css
@@ -36,6 +36,10 @@
 
 .option:before {
     content: counter(optionCount, upper-alpha)'. ';
+    display: inline-block;
+    width: 25px;
+    margin-right: -2px;
+    text-align: center;
 }
 
 .options input[name="options"] {
